# nlib

./: .gitignore  .gitmodules  CMakeLists.txt
include/nlib/: binaryreader.h  binarywriter.h  types.h  util.h
include/nlib/file/: narc.h
src/: binaryreader.cpp  binarywriter.cpp  main.cpp  narc.cpp  narc_detail.cpp  util.cpp
src/narc/: narc.cpp  narc_detail.cpp
